# lol-mode-mcp

./: .gitignore  .mcp.json  DOMAIN_SETUP.md  LICENSE  LOL_MCP_BRIEF.md  NOTES.md  README.md  UPDATE_SOP.md  pyproject.toml  render.yaml  server.py
.github/workflows/: keepalive.yml
scripts/: build_arena_stats.py  check_update.py  crawl_arena.py
src/lol_mode_mcp/: __init__.py  aram.py  arena.py  arena_balance.py  arena_stats.py  arena_wiki.py  cache.py  champions.py  formatting.py  http_util.py  mayhem_augments.py  mechanics.py  official_notes.py  patch_notes.py  server.py  translate.py  web.py  wikitext.py
src/lol_mode_mcp/data/: arena_stats.json  mapchanges_zh.json  mayhem_zh.json  mode_mechanics.json  splash_facing.json  wiki_aug_zh.json
src/lol_mode_mcp/web/: index.html
tests/: test_aram_format.py  test_aram_parse.py  test_arena.py  test_arena_balance.py  test_arena_stats.py  test_arena_wiki.py  test_champions.py  test_formatting.py  test_mechanics.py  test_official_notes.py  test_patch_notes.py  test_translate.py  test_wikitext.py
