[project]
name = "lol-mode-mcp"
version = "0.1.0"
description = "MCP server for League of Legends game-mode data: Arena augments, ARAM per-champion balance, mode mechanics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27",
    "fastmcp>=3.0",
]

[project.scripts]
lol-mode-mcp = "lol_mode_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lol_mode_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
